--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="index.html">
-              <img src="assets/images/white-logo.svg" alt="Logo" />
+              <img src="assets/images/white-logo.svg" alt="Logo" width="184" style="padding-right:1em" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNine"
               aria-controls="navbarNine" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,7 +88,7 @@
     </div>
     <div class="sidebar-content">
       <div class="sidebar-logo">
-        <a href="index.html"><img src="assets/images/logo.svg" alt="Logo" /></a>
+        <a href="index.html"><img src="assets/images/logo.svg" alt="Logo" width="184" /></a>
       </div>
       <p class="text">Lorem ipsum dolor sit amet adipisicing elit. Sapiente fuga nisi rerum iusto intro.</p>
       <!-- logo -->
@@ -828,7 +828,7 @@
               <div class="footer-widget f-about">
                 <div class="logo">
                   <a href="index.html">
-                    <img src="assets/images/logo.svg" alt="#" class="img-fluid" />
+                    <img src="assets/images/logo.svg" alt="#" width="184" class="img-fluid" />
                   </a>
                 </div>
                 <p>
