--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="sidebar-logo">
         <a href="index.html"><img src="assets/images/logo.svg" alt="Logo" width="184" /></a>
       </div>
-      <p class="text">Lorem ipsum dolor sit amet adipisicing elit. Sapiente fuga nisi rerum iusto intro.</p>
+      <p class="text">Deeply committed to creating customized, impeccable solutions for your business.</p>
       <!-- logo -->
       <div class="sidebar-menu">
         <h5 class="menu-title">Quick Links</h5>
@@ -133,9 +133,9 @@
       <div class="row align-items-center">
         <div class="col-lg-6 col-md-12 col-12">
           <div class="header-content">
-            <h1>The key to success for Corporate & SMBs.</h1>
+            <h1>Unlocking Corporate and SMB Success with Dedicated Servers.</h1>
             <p>
-              We are a hosting provider and digital agency that helps brands to achieve their business outcomes. We see technology as a tool to create amazing things.
+              At our hosting provider and digital agency, we specialize in empowering brands to realize their business objectives through dedicated server solutions. We view technology as the driving force behind achieving remarkable results.
             </p>
             <!-- <div class="button">
               <a href="javascript:void(0)" class="btn primary-btn">Get Started</a>
@@ -421,12 +421,9 @@
         <div class="row">
           <div class="col-12">
             <div class="content">
-              <h6>Pricing</h6>
-              <h2 class="fw-bold">Pricing & Plans</h2>
-              <p>
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form.
-              </p>
+              <h6>Services</h6>
+              <h2 class="fw-bold">Serivces and Prices</h2>
+              <p></p>
             </div>
           </div>
         </div>
@@ -440,27 +437,29 @@
         <div class="col-lg-4 col-md-6 col-12">
           <div class="pricing-style-fourteen">
             <div class="table-head">
-              <h6 class="title">Starter</h4>
-                <p></p>
+              <h6 class="title">Dedicated Server Plan</h4>
+                <p>starting from</p>
                 <div class="price">
                   <h2 class="amount">
-                    <span class="currency">$</span>99<span class="duration">/mo </span>
+                    <span class="currency">$</span>199<span class="duration">/mo </span>
                   </h2>
                 </div>
             </div>
 
             <div class="light-rounded-buttons">
-              <a href="javascript:void(0)" class="btn primary-btn-outline">
+              <a href="#contact" class="btn primary-btn-outline">
                 Start free trial
               </a>
             </div>
 
             <div class="table-content">
               <ul class="table-list">
-                <li> <i class="lni lni-checkmark-circle"></i> Intel i3 10th Gen</li>
-                <li> <i class="lni lni-checkmark-circle"></i> 8Gb Ram</li>
-                <li> <i class="lni lni-checkmark-circle deactive"></i> 500GiB SSD</li>
-                <li> <i class="lni lni-checkmark-circle deactive"></i> 100Mbps Unlimited</li>
+                <li> <i class="lni lni-checkmark-circle"></i> Quad-core Intel Xeon Processor</li>
+                <li> <i class="lni lni-checkmark-circle"></i> 16 GB DDR4 ECC</li>
+                <li> <i class="lni lni-checkmark-circle"></i> 480 GB SSD</li>
+                <li> <i class="lni lni-checkmark-circle"></i> 10 TB Bandwidth</li>
+                <li> <i class="lni lni-checkmark-circle"></i> DDoS Protection Included</li>
+                <li> <i class="lni lni-checkmark-circle"></i> 24/7 Technical Support</li>
               </ul>
             </div>
           </div>
@@ -468,27 +467,30 @@
         <div class="col-lg-4 col-md-6 col-12">
           <div class="pricing-style-fourteen middle">
             <div class="table-head">
-              <h6 class="title">Exclusive</h4>
-                <p></p>
+              <h6 class="title">CDN Plan</h4>
+                <p>starting from</p>
                 <div class="price">
                   <h2 class="amount">
-                    <span class="currency">$</span>299<span class="duration">/mo </span>
+                    <span class="currency">$</span>999<span class="duration">/mo </span>
                   </h2>
                 </div>
             </div>
 
             <div class="light-rounded-buttons">
-              <a href="javascript:void(0)" class="btn primary-btn">
-                Start free trial
+              <a href="#contact" class="btn primary-btn">
+                Contact Us
               </a>
             </div>
 
             <div class="table-content">
               <ul class="table-list">
-                <li> <i class="lni lni-checkmark-circle"></i> Intel i5 10th Gen</li>
-                <li> <i class="lni lni-checkmark-circle"></i> 16Gb Ram</li>
-                <li> <i class="lni lni-checkmark-circle deactive"></i> 500GiB SSD x 2 (RAID 1)</li>
-                <li> <i class="lni lni-checkmark-circle deactive"></i> 250Mbps Unlimited</li>
+                <li> <i class="lni lni-checkmark-circle"></i> Global CDN Network</li>
+                <li> <i class="lni lni-checkmark-circle"></i> SSL Encryption</li>
+                <li> <i class="lni lni-checkmark-circle"></i> Traffic Acceleration</li>
+                <li> <i class="lni lni-checkmark-circle"></i> Real-time Analytics</li>
+                <li> <i class="lni lni-checkmark-circle"></i> Unlimited Bandwidth</li>
+                <li> <i class="lni lni-checkmark-circle"></i> DDoS Protection Included</li>
+                <li> <i class="lni lni-checkmark-circle"></i> 24/7 Technical Support</li>
               </ul>
             </div>
           </div>
@@ -496,27 +498,30 @@
         <div class="col-lg-4 col-md-6 col-12">
           <div class="pricing-style-fourteen">
             <div class="table-head">
-              <h6 class="title">Premium</h4>
-                <p></p>
+              <h6 class="title">Cloud Server Plan</h4>
+                <p>starting from</p>
                 <div class="price">
                   <h2 class="amount">
-                    <span class="currency">$</span>699<span class="duration">/mo </span>
+                    <span class="currency">$</span>49<span class="duration">/mo </span>
                   </h2>
                 </div>
             </div>
 
             <div class="light-rounded-buttons">
-              <a href="javascript:void(0)" class="btn primary-btn-outline">
-                Start free trial
+              <a href="#contact" class="btn primary-btn-outline">
+                Contact Us
               </a>
             </div>
 
             <div class="table-content">
               <ul class="table-list">
-                <li> <i class="lni lni-checkmark-circle"></i> Intel i7 10th Gen</li>
-                <li> <i class="lni lni-checkmark-circle"></i> 64Gb Ram</li>
-                <li> <i class="lni lni-checkmark-circle deactive"></i> 1TiB SSD x 2 (RAID 1)</li>
-                <li> <i class="lni lni-checkmark-circle deactive"></i> 500Mbps Unlimited</li>
+                <li> <i class="lni lni-checkmark-circle"></i> Multiple scalable VMs</li>
+                <li> <i class="lni lni-checkmark-circle"></i> up to 64 vCPUs per VM</li>
+                <li> <i class="lni lni-checkmark-circle"></i> up to 320 GB per VM</li>
+                <li> <i class="lni lni-checkmark-circle"></i> Flexible SSD and HDD Options</li>
+                <li> <i class="lni lni-checkmark-circle"></i> Automated backups</li>
+                <li> <i class="lni lni-checkmark-circle"></i> DDoS Protection Included</li>
+                <li> <i class="lni lni-checkmark-circle"></i> 24/7 Technical Support</li>
               </ul>
             </div>
           </div>
@@ -832,8 +837,7 @@
                   </a>
                 </div>
                 <p>
-                  Making the world a better place through constructing elegant
-                  hierarchies.
+                  Deeply committed to creating customized, impeccable solutions for your business.</p>
                 </p>
                 <p class="copyright-text">
                   <span>© 2023 OPENCXC.</span>
