--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
                   Deeply committed to creating customized, impeccable solutions for your business.</p>
                 </p>
                 <p class="copyright-text">
-                  <span>© 2023 OPENCXC.</span>
+                  <span>© <script>document.write(new Date().getFullYear())</script> OPENCXC.COM</span>
                   <!-- Designed and Developed by <a href="javascript:void(0)" rel="nofollow"> Ayro UI </a> -->
                 </p>
               </div>
